--- a/package.json
+++ b/package.json
@@ -105,11 +105,13 @@
     ]
   },
   "scripts": {
+    "start": "stripes serve",
     "lint": "eslint *.js settings",
     "test": "cd ../ui-testing; yarn test-module -- -o --run=organization --host=localhost"
   },
   "devDependencies": {
     "@folio/eslint-config-stripes": "^2.0.0",
+    "@folio/stripes-cli": "^1.3.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^8.2.2",
     "babel-preset-es2015": "^6.18.0",
@@ -120,10 +122,10 @@
     "webpack": "1.11.0"
   },
   "dependencies": {
+    "@folio/react-intl-safe-html": "^1.0.1",
     "@folio/stripes-components": "^3.0.0",
     "@folio/stripes-form": "^0.8.0",
     "@folio/stripes-smart-components": "^1.4.22",
-    "@folio/react-intl-safe-html": "^1.0.1",
     "downshift": "^2.0.19",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
