--- a/package.json
+++ b/package.json
@@ -146,6 +146,8 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react-intl": "^2.3.0",
+    "react-router-dom": "^4.3.1",
+    "react-router-prop-types": "^1.0.4",
     "redux-form": "^7.0.3"
   },
   "peerDependencies": {
